--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 Django==1.9
+django-crispy-forms==1.6.0
+django-markdown-deux==1.0.5
 django-pagedown==0.1.1
 djangorestframework==3.3.3
+djangorestframework-jwt==1.8.0
+markdown2==2.3.1
 MySQL-python==1.2.5
+Pillow==3.1.0
+PyJWT==1.4.0
